--- a/main/templates/edit_post_food.html
+++ b/main/templates/edit_post_food.html
@@ -9,7 +9,7 @@
     <button type="submit">Save Changes</button>
 </form>
 
-<a href="{% url 'food_feed' %}">Cancel</a>  <!-- Link back to the feed -->
+<a href="{% url 'food_feed' %}">Cancel</a>
 {% endblock %}
 
 
